changed text on pets page button. changed spacing on indiv pet page and adopt form page to account for the navbar changing to fixed

--- a/public/styles/layout/_individualPet.scss
+++ b/public/styles/layout/_individualPet.scss
@@ -3,7 +3,7 @@ div.petPage {
   justify-content: space-around;
   align-items: center;
   width: clamp(90%, 70%, 2000px);
-  margin: 1.5rem auto;
+  margin: 5rem auto 0 auto;
   padding: 1rem;
   background-color: $light-background;
   div {
